--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
       </div>
     </div>
   </footer>
-  <script src="./src/main.js"></script>
+  <script type="module" src="./src/main.js"></script>
   <script src="https://unpkg.com/swiper@11/swiper-bundle.min.js"></script>
 </body>
 
