--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/swiper@11/swiper-bundle.min.css">
+  <link rel="stylesheet" href="./src/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./src/assets/styles/styles.css">
   <title>Xpage</title>
 </head>
@@ -461,8 +461,35 @@
       </div>
     </div>
   </footer>
-  <script type="module" src="./src/main.js"></script>
-  <script src="https://unpkg.com/swiper@11/swiper-bundle.min.js"></script>
+  <script src="./src/swiper/swiper-bundle.min.js"></script>
+  
+    <script>
+      
+const swiper = new Swiper('.swiper', {
+  simulateTouch: false,
+  speed: 5, 
+  loop: true, 
+});
+
+const buttons = document.querySelectorAll('.swiper__button');
+let timeout;
+
+buttons.forEach((button) => {
+  button.addEventListener('mouseenter', () => {
+    const slideIndex = parseInt(button.getAttribute('data-slide'));
+    timeout = setTimeout(() => {
+      swiper.slideTo(slideIndex);
+    }, 50); 
+  });
+
+  button.addEventListener('mouseleave', () => {
+    clearTimeout(timeout);
+  });
+});
+
+
+    </script>
+  <script type="module" src="/main.js"></script>
 </body>
 
 </html>
